@@ -1,2 +1,2 @@
-src/snap-run
+src/snap-confine
 src/tmp
