@@ -1,11 +1,11 @@
 # Overview
 
-The snap-run program launches snappy applications to restrict
+The snap-confine program launches snappy applications to restrict
 access. It uses apparmor and seccomp to do this.
 
 Run with:
 
-    $ snap-run /path/to/rootdir security-profile /path/to/binary additional args
+    $ snap-confine /path/to/rootdir security-profile /path/to/binary additional args
 
 Can run the tests with:
 
