@@ -1,0 +1,3 @@
+debian/usr.bin.snap-confine etc/apparmor.d
+usr/*
+lib/*
