@@ -1,3 +1,0 @@
-debian/usr.bin.snap-run etc/apparmor.d
-usr/*
-lib/*
